[package]
name = "sandworm"
version = "0.1.0"
authors = ["Nikita Baksalyar <nikita.baksalyar@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["hash", "keccak"]
readme = "README.md"
description = "Lineage sandworm – Keccak-prime hashing for green PoW (from AIBlock Keccak-Prime)."
homepage = "https://lineage.foundation"
documentation = "https://github.com/lineage-foundation/sandworm"
repository = "https://github.com/lineage-foundation/sandworm"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crunchy = "0.2.2"
hex = "0.4.2"

# used for the expansion function
aes-gcm-siv = "0.9.0"

# used in the SlothVDF implementation
num-traits = "0.2"
num-bigint = "0.4"
lazy_static = "1.4"
# crypto-bigint = "0.4"

[features]
default = ["fips202"]
cshake = []
fips202 = ["keccak", "shake", "sha3"]
k12 = []
keccak = []
kmac = ["cshake"]
parallel_hash = ["cshake"]
sha3 = []
shake = []
sp800 = ["cshake", "kmac", "tuple_hash"]
tuple_hash = ["cshake"]

[[bin]]
name = "main"
